--- a/Project 2/styles.css
+++ b/Project 2/styles.css
@@ -310,3 +310,62 @@ font-weight: 500;
     
     font-weight: 500;
 }
+
+#footer{
+width: 100%;
+height: 100%;
+background-color: black;
+color: white;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-around;
+}
+
+#footer h2{
+    font-size: 32px;
+}
+
+#footer h1{
+    font-size: 144px;
+    font-weight: 500;
+}
+
+#text-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.btn{
+    background-color: white;
+    color: black;
+    padding: 10px 20px;
+    border-radius: 50px;
+    font-size: 22px;
+    border: none;
+    margin-top: 20px;
+}
+
+#footer-pages{
+    padding-top: 50px;
+    height: 40%;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#pages h3 {
+    margin-top: 20px;
+}
+
+
+#cms h3 {
+    margin-top: 20px;
+}
+
+
+#utility-pages h3 {
+    margin-top: 20px;
+}
